Fix touch events not working on multi-screen

If we have more than one touch monitor and we are expanding chrome
window to all the touch screens, we can only touch on one screen not
the others. We found out the when we searched for targets of the touch
events, we could not find the right target, which should be
"RenderWidgetHostViewAura", because we are checking if the screen
locations of the touch events are in the display's bound, which only
matches to one monitor. We should change to screen's bound, which
can represent the bound of all the screens that are connected.

Bug: 901399
Change-Id: I9c85d6e81d0d1bbaf023f566b1512a5c7b839625
Reviewed-on: https://chromium-review.googlesource.com/c/1354125
Commit-Queue: Lan Wei <lanwei@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611975}
Former-commit-id: 5f78358dbdfa7b1a89e3359e8de45b25a7db3ec6